# readit

./: package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app.rs  home.rs  lib.rs  main.rs
src/app/: greet.tsx  layout.tsx  page.tsx
src/components/: Navbar.tsx
src/styles/: app.css  theme.css
