[package]
name = "app"
version = "0.1.0"
description = "A privacy desktop frontend for Reddit."
authors = ["Slekup <opensource@slekup.com>"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

[lib]
name = "readit"

[profile.release]
lto = true
codegen-units = 1
strip = "debuginfo"
panic = "abort"


[build-dependencies]
tauri-build = { version = "1.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.7.0", features = [] }
reqwest = { version = "0.12.5", default-features = false, features = [
  "json",
  "gzip",
  "brotli",
  "rustls-tls",
] }
thiserror = "1.0.63"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
